--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -1,15 +1,13 @@
 {% extends "layout/base.html" %}
 
-{% block page_title %}
-    {% if convention.display_options.display_progress_bar_3 %}Actions{% else %}Téléversement{% endif %} - APiLos
-{% endblock%}
+{% block page_title %} Actions - APiLos {% endblock%}
 
 {% load static %}
 
 {% block content %}
     <div class="fr-container-fluid ds_banner">
-        {% include "conventions/common/form_header.html" with convention=convention %}
-        {% include "common/step_progressbar.html" with convention=convention %}
+        {% include "conventions/common/form_header.html"%}
+        {% include "common/step_progressbar.html"%}
         <div class="fr-container fr-pb-5w">
             {% if convention.televersement_convention_signee_le %}
                 <p class="fr-h3">Votre convention signée a été téléversée le {{convention.televersement_convention_signee_le}}
@@ -26,7 +24,7 @@
                             Générer la fiche CAF
                         </p>
                         <p>
-                            Ici, vous pouvez télécharger une fiche CAF.
+                            La fiche CAF sera générée en format docx et téléchargée automatiquement.
                         </p>
                         <form action="{% url 'conventions:fiche_caf' convention_uuid=convention.uuid %}">
                             {% csrf_token %}
@@ -92,7 +90,24 @@
                     </div>
                 {% endif %}
             </div>
-            <p>Prochainement, vous pourrez créer des avenants</p>
+            {% if request|is_bailleur %}
+                <div class="fr-col-md-12">
+                    <div role="alert" class="fr-alert fr-alert--info">
+                        <p class="fr-alert__title">
+                            Avenants
+                        </p>
+                        <p>
+                            L'avenant créé sera automatiquement rattaché à la convention actuelle.
+                        </p>
+                        <div>
+                            <a class="fr-btn fr-my-1w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
+                                <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+            {% include "conventions/avenant_list.html" with conventions=avenants %}
 
             {% if request|is_instructeur %}
                 <div class="fr-accordion fr-mt-5w">
