--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -1,15 +1,13 @@
 {% extends "layout/base.html" %}
 
-{% block page_title %}
-    {% if convention.display_options.display_progress_bar_3 %}Actions{% else %}Téléversement{% endif %} - APiLos
-{% endblock%}
+{% block page_title %} Téléversement - APiLos {% endblock%}
 
 {% load static %}
 
 {% block content %}
     <div class="fr-container-fluid ds_banner">
-        {% include "conventions/common/form_header.html" with convention=convention %}
-        {% include "common/step_progressbar.html" with convention=convention %}
+        {% include "conventions/common/form_header.html"%}
+        {% include "common/step_progressbar.html"%}
         {% if request|is_instructeur %}
             <div class="fr-container fr-pb-5w">
 
