s523: Remplacer "services hypothèques" par "services de la publicité foncière"

--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -32,7 +32,7 @@
                     <div class="fr-col-md-12">
 
                         <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
-                            <p>L’ajout des états descriptifs de division (EDD) est facultatif et dépend des spécificités locales des services des hypothèques. </p>
+                            <p>L’ajout des états descriptifs de division (EDD) est facultatif et dépend des spécificités locales des services de publicité foncière. </p>
                             <p>Pour rappel, l’EDD peut être demandé quand une opération comporte plusieurs financements et donc plusieurs conventions.</p>
                         </div>
 
