--- a/templates/common/button/next_and_save.html
+++ b/templates/common/button/next_and_save.html
@@ -1,21 +1,3 @@
-{% if convention_uuid %}
-    <button class="fr-btn fr-fi-arrow-right-s-line fr-btn--icon-right" id='next_button'>
-        Enregistrer et Suivant
-    </button>
-    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-        document.addEventListener('DOMContentLoaded', function () {
-            document.getElementById('next_button')
-                .addEventListener('click', function(){ location.href='{% url suivant convention_uuid=convention_uuid %}' });
-        });
-    </script>
-{% else %}
-    <button class="fr-btn fr-fi-arrow-right-s-line fr-btn--icon-right" id='next_button'>
-        Enregistrer et Suivant
-    </button>
-    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-        document.addEventListener('DOMContentLoaded', function () {
-            document.getElementById('next_button')
-                .addEventListener('click', function(){ location.href='{% url suivant %}' });
-        });
-    </script>
-{% endif %}
+<button class="fr-btn fr-fi-arrow-right-s-line fr-btn--icon-right">
+    Enregistrer et Suivant
+</button>
