--- a/templates/common/button/noteditable_button.html
+++ b/templates/common/button/noteditable_button.html
@@ -2,12 +2,12 @@
 <input type="hidden" name="editable_upload" value="{{ editable_upload }}">
 <div>
     <div id="save_after_comments" hidden>
-        <button class="fr-btn fr-fi-arrow-right-s-line fr-btn--icon-right" id='atomic_button'>
+        <button class="fr-btn fr-fi-arrow-right-s-line fr-btn--icon-right">
             Enregistrer et retour au Récapitulatif
         </button>
     </div>
     <div id="back_to_recap" hidden>
-        <a class="fr-btn fr-fi-arrow-right-s-line fr-btn--icon-right" id="return_recap"
+        <a class="fr-btn fr-fi-arrow-right-s-line fr-btn--icon-right"
             href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
             Retour au Récapitulatif
         </a>
