add type stationnement view and service class and tests

--- a/templates/common/button/noteditable_button.html
+++ b/templates/common/button/noteditable_button.html
@@ -1,5 +1,5 @@
 <input type="hidden" name="redirect_to_recap" value='True'>
-<input type="hidden" name="editable_upload" value="{{ editable_upload }}">
+<input type="hidden" name="editable_after_upload" value="{{ editable_after_upload }}">
 <div>
     <div id="save_after_comments" hidden>
         <button class="fr-btn fr-fi-arrow-right-s-line fr-btn--icon-right">
