--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="robots" content="{% block robots %}{% if STAGING %}noindex, nofollow{% else %}index, follow{% endif %}{% endblock %}">
+        <meta name="robots" content="{% block robots %}{% if ENVIRONMENT == 'production' %}index, follow{% else %}noindex, nofollow{% endif %}{% endblock %}">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!--Title and desc-->
