--- a/templates/conventions/home/instructeur_cerbere_no_convention.html
+++ b/templates/conventions/home/instructeur_cerbere_no_convention.html
@@ -7,11 +7,13 @@
                 <p class="apilos-subtitle">Vous n'avez pas encore de convention à instruire.</p>
                 <div class="fr-p-1w fr-grid-row apilos-block-faqlink">
                     <div class="fr-p-2w"><span class="fr-icon-question-mark" aria-hidden="true"></span></div>
-                    <div class="fr-p-2w"><strong>Vous avez besoin d'aide ?</strong><br/>
-                        Retrouvez notre
-                        <a href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
-                            FAQ
-                        </a>
+                    <div class="fr-p-1w">
+                        <div><strong>Vous avez besoin d'aide ?</strong></div>
+                        <div class="fr-text--light">Retrouvez notre
+                            <a href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
+                                FAQ
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
