--- a/templates/common/required_fields_info.html
+++ b/templates/common/required_fields_info.html
@@ -1,4 +1,4 @@
 <p class="fr-mb-3w fr-ml-3w fr-text--xs notes">
-    <span class="fr-fi-information-line fr-fi--sm" aria-hidden="true"></span>
+    <span class="fr-icon-information-line fr-fi--sm" aria-hidden="true"></span>
     Les champs marqués d'une astérisque ({% include "common/form/required_field_star.html" %}) sont obligatoires.
 </p>
