--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -97,7 +97,7 @@
                                                             </button>
                                                         </li>
                                                         <li>
-                                                            <button class="fr-btn fr-fi-checkbox-line" name='ignore_optional_errors' value=1>
+                                                            <button class="fr-btn fr-icon-checkbox-line" name='ignore_optional_errors' value=1>
                                                                 Valider quand même
                                                             </button>
                                                         </li>
