--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
                     {% if not CERBERE_AUTH %}
                         <div class="fr-col-lg-4 fr-col-md-12 fr-mt-md-5w fr-mt-lg-10w">
                             <a class="fr-btn" href="{% url 'login' %}">
-                                <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
+                                <span class="fr-icon-edit-line fr-mr-1w" aria-hidden="true">
                                 </span>Créer une convention
                             </a>
                         </div>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="fr-col-lg-4 fr-col-md-12 fr-mt-md-5w fr-mt-lg-10w">
                         <a class="fr-btn fr-btn--secondary" href="{% url 'login' %}?instructeur=1">
-                            <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
+                            <span class="fr-icon-account-line fr-mr-1w" aria-hidden="true">
                             </span>Instruire une convention
                         </a>
                     </div>
