--- a/templates/settings/bailleurs.html
+++ b/templates/settings/bailleurs.html
@@ -64,7 +64,7 @@
                                         <td>{{ bailleur.ville }}</td>
                                         <td>
                                             <a class="fr-link fr-mb-1w" href="{% url 'settings:edit_bailleur' bailleur_uuid=bailleur.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true"></span>
+                                                <span class="fr-icon-edit-line" aria-hidden="true"></span>
                                             </a>
                                         </td>
                                     </tr>
