--- a/templates/common/button/login.html
+++ b/templates/common/button/login.html
@@ -1,3 +1,3 @@
-<a class="fr-btn fr-fi-edit-line fr-btn--icon-left" href="{% url 'login' %}?next={{ request.path }}">
+<a class="fr-btn fr-icon-edit-line fr-btn--icon-left" href="{% url 'login' %}?next={{ request.path }}">
     Créer une convention APL
 </a>
