--- a/templates/common/button/previous.html
+++ b/templates/common/button/previous.html
@@ -1,9 +1,9 @@
 {% if convention_uuid %}
-    <a class="fr-btn fr-btn--secondary fr-fi-arrow-left-s-line fr-btn--icon-left" href='{% url precedent convention_uuid=convention_uuid %}'>
+    <a class="fr-btn fr-btn--secondary fr-icon-arrow-left-s-line fr-btn--icon-left" href='{% url precedent convention_uuid=convention_uuid %}'>
         Précédent
     </a>
 {% else %}
-    <a class="fr-btn fr-btn--secondary fr-fi-arrow-left-s-line fr-btn--icon-left" href='{% url precedent %}'>
+    <a class="fr-btn fr-btn--secondary fr-icon-arrow-left-s-line fr-btn--icon-left" href='{% url precedent %}'>
         Précédent
     </a>
 {% endif %}
