--- a/templates/common/form/input_date.html
+++ b/templates/common/form/input_date.html
@@ -1,13 +1,13 @@
 <div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}" id="{{form_input.id_for_label}}_group">
-    
+
     {% if form_input.label %}
         {% if form_input.help_text %}
-        {% if helptext_visible %}
-            <label class="fr-label fr-mb-1w" for="{{form_input.id_for_label}}">
-                {{ form_input.label }}
-                {% include "common/form/required_field.html" with form_input=form_input %}
-                {% include "common/help_field.html" with form_input=form_input %}
-            </label>
+            {% if helptext_visible %}
+                <label class="fr-label fr-mb-1w" for="{{form_input.id_for_label}}">
+                    {{ form_input.label }}
+                    {% include "common/form/required_field.html" with form_input=form_input %}
+                    {% include "common/help_field.html" with form_input=form_input %}
+                </label>
             {% else %}
                 <detailS>
                     <summary>
@@ -15,12 +15,12 @@
                             {{ form_input.label }}
                             {% include "common/form/required_field.html" with form_input=form_input %}
                         </label>
-                        <span class="fr-link fr-link--sm fr-fi-information-line content__helpicon"></span>
+                        <span class="fr-link fr-link--sm fr-icon-information-line content__helpicon"></span>
                     </summary>
                     {% include "common/help_field.html" with form_input=form_input %}
                 </detailS>
             {% endif %}
-            {% else %}
+        {% else %}
             <label class="fr-label fr-mb-1w" for="{{form_input.id_for_label}}">
                 {{ form_input.label }}
                 {% include "common/form/required_field.html" with form_input=form_input %}
