--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -59,7 +59,7 @@
                                         </div>
                                         {% if convention.display_options.display_progress_bar_1 %}
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                                <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         {% endif %}
                                     </div>
@@ -91,7 +91,7 @@
                                         </div>
                                         {% if convention.display_options.display_progress_bar_1 %}
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                                <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         {% endif %}
                                     </div>
@@ -142,7 +142,7 @@
                                     </div>
                                     {% if convention.display_options.display_progress_bar_1 %}
                                         <a class="fr-link fr-mb-1w" href="{% url 'conventions:programme' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                                         </a>
                                     {% endif %}
                                 </div>
@@ -174,7 +174,7 @@
                                     </div>
                                     {% if convention.display_options.display_progress_bar_1 %}
                                         <a class="fr-link fr-mb-1w" href="{% url 'conventions:cadastre' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                                         </a>
                                     {% endif %}
                                 </div>
@@ -209,7 +209,7 @@
                                     </div>
                                     {% if convention.display_options.display_progress_bar_1 %}
                                         <a class="fr-link fr-mb-1w" href="{% url 'conventions:cadastre' convention_uuid=convention.uuid %}#id_reference_cadastrale_div" >
-                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                                         </a>
                                     {% endif %}
                                 </div>
@@ -274,7 +274,7 @@
                                     </div>
                                     {% if convention.display_options.display_progress_bar_1 %}
                                         <a class="fr-link fr-mb-1w" href="{% url 'conventions:edd' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                                         </a>
                                     {% endif %}
                                 </div>
@@ -340,7 +340,7 @@
                                     </div>
                                     {% if convention.display_options.display_progress_bar_1 %}
                                         <a class="fr-link fr-mb-1w" href="{% url 'conventions:financement' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                                         </a>
                                     {% endif %}
                                 </div>
@@ -417,7 +417,7 @@
                                     </div>
                                     {% if convention.display_options.display_progress_bar_1 %}
                                         <a class="fr-link fr-mb-1w" href="{% url 'conventions:stationnements' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                                         </a>
                                     {% endif %}
                                 </div>
