--- a/templates/conventions/recapitulatif/annexes.html
+++ b/templates/conventions/recapitulatif/annexes.html
@@ -9,7 +9,7 @@
                         </h4>
                     </div>
                     <a class="fr-link fr-mb-1w" href="{% url 'conventions:annexes' convention_uuid=convention.uuid %}" >
-                        <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                        <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                     </a>
                 </div>
                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
