--- a/templates/conventions/recapitulatif/logements.html
+++ b/templates/conventions/recapitulatif/logements.html
@@ -10,7 +10,7 @@
                     </div>
                     {% if convention.display_options.display_progress_bar_1 %}
                         <a class="fr-link fr-mb-1w" href="{% url 'conventions:logements' convention_uuid=convention.uuid %}" >
-                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
+                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                         </a>
                     {% endif %}
                 </div>
