--- a/templates/settings/administrations.html
+++ b/templates/settings/administrations.html
@@ -65,7 +65,7 @@
                                         <td>{{ administration.prefix_convention }}</td>
                                         <td>
                                             <a class="fr-link fr-mb-1w" href="{% url 'settings:edit_administration' administration_uuid=administration.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true"></span>
+                                                <span class="fr-icon-edit-line" aria-hidden="true"></span>
                                             </a>
                                         </td>
                                     </tr>
