--- a/templates/settings/user_list.html
+++ b/templates/settings/user_list.html
@@ -61,7 +61,7 @@
                             <td>
                                 {% if request.user|is_administrator:user %}
                                     <a class="fr-link fr-mb-1w" href="{% url 'settings:edit_user' username=user.username %}" >
-                                        <span class="fr-fi-edit-line" aria-hidden="true"></span>
+                                        <span class="fr-icon-edit-line" aria-hidden="true"></span>
                                     </a>
                                 {% endif %}
                             </td>
