--- a/templates/conventions/recapitulatif/alert_convention.html
+++ b/templates/conventions/recapitulatif/alert_convention.html
@@ -4,7 +4,7 @@
             <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
                 <p>Le document de convention n'est pas encore soumis à l'instruction{% if request|is_bailleur %},
                     pour finaliser votre demande de conventionnement, vous devez cliquer sur le bouton
-                    <strong>"Soumettre au service instructeur"</strong> en bas de page{% endif %}</p>
+                    <strong>"Soumettre au service instructeur"</strong>{% endif %}</p>
             </div>
         </div>
     </div>
