--- a/templates/conventions/actions/submit_convention.html
+++ b/templates/conventions/actions/submit_convention.html
@@ -1,4 +1,4 @@
-<div class="fr-col-12 fr-col-lg-6">
+<div class="fr-col-12">
     <div role="alert" class="fr-alert fr-alert--info">
         <p class="fr-alert__title">
             Soumettre au service instructeur
@@ -11,12 +11,13 @@
         </p>
         <form method="post" action="{% url 'conventions:save' convention_uuid=convention.uuid %}" data-turbo="false">
             {% csrf_token %}
-            <button class="fr-btn fr-btn--secondary fr-my-1w">
-                Enregistrer le projet de convention
-            </button>
             <button name="SubmitConvention" value=True class="fr-btn fr-my-1w">
                 Soumettre au service instructeur
             </button>
+            <button class="fr-my-1w">
+                Enregistrer le projet de convention
+            </button>
+
         </form>
     </div>
 </div>
