--- a/templates/conventions/home/instructeur_cerbere_no_convention.html
+++ b/templates/conventions/home/instructeur_cerbere_no_convention.html
@@ -5,17 +5,7 @@
             <div class="fr-my-5w">
                 <h1 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h1>
                 <p class="apilos-subtitle">Vous n'avez pas encore de convention à instruire.</p>
-                <div class="fr-p-1w fr-grid-row apilos-block-faqlink">
-                    <div class="fr-p-2w"><span class="fr-icon-question-mark" aria-hidden="true"></span></div>
-                    <div class="fr-p-1w">
-                        <div><strong>Vous avez besoin d'aide ?</strong></div>
-                        <div class="fr-text--light">Retrouvez notre
-                            <a href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
-                                FAQ
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                {% include "common/FAQ_link.html"%}
             </div>
         </div>
     </div>
