--- a/templates/layout/header_no_cerbere.html
+++ b/templates/layout/header_no_cerbere.html
@@ -58,17 +58,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <div class="fr-p-1w fr-grid-row apilos-block-faqlink">
-                                <div class="fr-p-2w"><span class="fr-icon-question-mark" aria-hidden="true"></span></div>
-                                <div class="fr-p-1w">
-                                    <div><strong>Vous avez besoin d'aide ?</strong></div>
-                                    <div class="fr-text--light">Retrouvez notre
-                                        <a href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
-                                            FAQ
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
+                            {% include "common/FAQ_link.html"%}
 
                         {% else %}
                             <ul class="fr-links-group">
