update: revert header with bailleur and administration display

--- a/templates/conventions/common/form_header.html
+++ b/templates/conventions/common/form_header.html
@@ -57,16 +57,20 @@
     <div class='background-contrast-grey950'>
         <div class="fr-container">
             <div class="fr-col-12 fr-pb-3w">
-                <div class="fr-grid-row fr-grid-row--gutters fr-pl-9w">
-                    <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-text--bold">
-                        Entreprise bailleur : {{ convention.bailleur }}
+                {% if request|is_instructeur %}
+                    <div class="fr-grid-row fr-grid-row--gutters fr-pl-9w">
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-text--bold">
+                            Entreprise bailleur : {{ convention.bailleur }}
+                        </div>
                     </div>
-                </div>
-                <div class="fr-grid-row fr-grid-row--gutters fr-pl-9w">
-                    <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-text--bold">
-                        Service instructeur : {{ convention.programme.administration }}
+                {% endif %}
+                {% if request|display_administration  %}
+                    <div class="fr-grid-row fr-grid-row--gutters fr-pl-9w">
+                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-text--bold">
+                            Service instructeur : {{ convention.programme.administration }}
+                        </div>
                     </div>
-                </div>
+                {% endif %}
                 <div class="fr-grid-row fr-grid-row--gutters  fr-pl-9w">
                     <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-text--bold">
                         Financement : {{ convention.lot.financement|default_if_none:'-' }}
