--- a/templates/conventions/common/form_header.html
+++ b/templates/conventions/common/form_header.html
@@ -88,6 +88,15 @@
                         Ville : {{ convention.programme.ville|default_if_none:'-' }}
                     </div>
                 </div>
+                <div class="fr-grid-row fr-grid-row--gutters  fr-pl-9w">
+                    <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-text--bold">
+                        <a href="/" title="Accueil - APiLos">
+                            <button class="fr-btn fr-my-1w">
+                                Retour à la liste des conventions
+                            </button>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
