--- a/templates/conventions/home/bailleur_cerbere_no_convention.html
+++ b/templates/conventions/home/bailleur_cerbere_no_convention.html
@@ -4,7 +4,8 @@
         <div class="fr-grid-row fr-grid-row--gutters">
             <div class="fr-my-5w">
                 <h1>Bienvenue dans votre espace Bailleur</h1>
-                <p class="apilos-subtitle">Ici, vous retrouverez vos conventions dès que les procédures de financement seront engagées? </p>
+                <p class="apilos-subtitle">Ici, vous retrouverez vos conventions dès que les procédures de financement seront engagées </p>
+                {% include "common/FAQ_link.html"%}
             </div>
         </div>
     </div>
@@ -14,11 +15,11 @@
         <div class="fr-col-12 fr-mt-5w fr-mb-3w">
             <div class="fr-grid-row">
                 <div class="fr-col-3 fr-col-md-3">
-                    <h2 class="fr-mt-2w">Je me prépare</h2>
+                    <h2 class="fr-mt-2w">Je prépare</h2>
                 </div>
                 <div class="fr-col-9 fr-col-md-9">
                     <div class="fr-mb-3w">
-                        <h3>Je récupère le(s) document(s) suivant(s)</h3>
+                        <h3>Les documents</h3>
                         <p>Il vous sera demandé de nous communiquer l'un des documents suivants concernant l'opération que vous souhaitez conventionner : </p>
                         <ul class="fr-col-offset-1">
                             <li>Acte de vente</li>
@@ -27,8 +28,8 @@
                         </ul>
                     </div>
                     <div class="fr-mb-3w">
-                        <h3>Je prépare mes tableaux</h3>
-                        <p>Vous pouvez télécharger et remplir les tableaux nécessaires à la création de votre convention. Ces modèle vous seront aussi proposés à chaque étape.</p>
+                        <h3>Les tableaux</h3>
+                        <p>Vous pouvez télécharger et remplir les tableaux nécessaires à la création de votre convention. Ces modèles vous seront aussi proposés à chaque étape.</p>
                         <div class="fr-col-offset-1">
                             <button type="button" class="fr-btn fr-btn--secondary" id='download_model'>
                                 <img class="apilos-fi-btn--secondary fr-mr-1w" src="{% static "icons/download.svg" %}">Télécharger les modèles de tableaux
@@ -41,24 +42,7 @@
                             </script>
                         </div>
                     </div>
-                    <div class="fr-mb-3w">
-                        <h3>Je consulte l'aide en ligne</h3>
-                        <p>Pour approfondir votre compréhension d'APiLos, référez-vous à tout moment à notre
-                            <a href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
-                                Aide en ligne
-                            </a>.
-                        </p>
-                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
-    <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center fr-mb-5w">
-        <div class="fr-col-12">
-            <div class="fr-alert fr-alert--info">
-                <p>Vous pouvez créer un brouillon de convention
-                    avant d'avoir réuni l'ensemble de ces documents
-                </p>
             </div>
         </div>
     </div>
