--- a/templates/conventions/home/instructeur_cerbere_no_convention.html
+++ b/templates/conventions/home/instructeur_cerbere_no_convention.html
@@ -4,32 +4,8 @@
         <div class="fr-grid-row fr-grid-row--gutters">
             <div class="fr-my-5w">
                 <h1 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h1>
-                <p class="apilos-subtitle">Vous n'avez pas encore de convention à instruire</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="fr-container">
-    <div class="fr-grid-row fr-grid-row--gutters">
-        <div class="fr-col-12 fr-mt-5w fr-mb-3w">
-            <div class="fr-grid-row">
-                <div class="fr-col-3 fr-col-md-3">
-                    <h2 class="fr-mt-2w">Comment démarrer sur APiLos</h2>
-                </div>
-                <div class="fr-col-9 fr-col-md-9">
-                    <div class="fr-mb-3w">
-                        <h3>Je prends contact avec l'équipe APiLos</h3>
-                        <p>Toute l'équipe APiLos est à votre disposition, n'hésitez pas à nous envoyer un email à l'adresse <a href="mailto:contact@apilos.beta.gouv.fr" target="_blank">contact@apilos.beta.gouv.fr</a></p>
-                    </div>
-                    <div class="fr-mb-3w">
-                        <h3>Je consulte l'aide en ligne</h3>
-                        <p>Pour approfondir votre compréhension d'APiLos, référez-vous à tout moment à notre
-                            <a href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
-                                Aide en ligne
-                            </a>.
-                        </p>
-                    </div>
-                </div>
+                <p class="apilos-subtitle">Vous n'avez pas encore de convention à instruire.</p>
+                {% include "common/FAQ_link.html"%}
             </div>
         </div>
     </div>
