--- a/templates/conventions/actions/submit_convention.html
+++ b/templates/conventions/actions/submit_convention.html
@@ -1,5 +1,5 @@
 <div class="fr-col-12">
-    <div role="alert" class="fr-alert fr-alert--info">
+    <div role="alert" class="fr-alert fr-alert--info fr-icon-arrow-left-s-line-double">
         <p class="fr-alert__title">
             Soumettre au service instructeur
         </p>
@@ -14,8 +14,8 @@
             <button name="SubmitConvention" value=True class="fr-btn fr-my-1w">
                 Soumettre au service instructeur
             </button>
-            <button class="fr-my-1w">
-                Enregistrer le projet de convention
+            <button class="fr-my-1w fr-ml-2w fr-link">
+                <u>Enregistrer comme brouillon</u>
             </button>
 
         </form>
