--- a/templates/conventions/actions/instructeur_notification.html
+++ b/templates/conventions/actions/instructeur_notification.html
@@ -12,7 +12,7 @@
                     Renvoyez {% if convention.is_avenant %}l'avenant de {% endif %}la convention à l'instruction</h4>
             {% else %}
                 <h4>Vous avez modifié {% if convention.is_avenant %}l'avenant de {% endif %}la convention<br>
-                    Faites part de vos commentaires à l'instructeur ? </h4>
+                    Faites part de vos commentaires à l'instructeur </h4>
             {% endif %}
             <div>
                 <form method="post" action="{% url 'conventions:feedback' convention_uuid=convention.uuid %}" data-turbo="false">
