--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -9,31 +9,36 @@
         {% include "conventions/common/form_header.html"%}
         {% include "common/step_progressbar.html"%}
         <div class="fr-container fr-pb-5w">
-            {% if convention.televersement_convention_signee_le %}
-                <p class="fr-h3">Votre convention signée a été téléversée le {{convention.televersement_convention_signee_le}}
-                </p>
-            {% else %}
-                <p class="fr-h3">Votre convention signée a déjà été téléversée</p>
-            {% endif %}
+            <div class="fr-col-md-12 fr-mt-2w fr-mb-4w">
+                <div role="alert" class="fr-alert fr-alert--success">
+                    {% if convention.televersement_convention_signee_le %}
+                        <p class="">Votre convention signée a été validée le <strong>{{convention.televersement_convention_signee_le}}</strong> <em>(Avec le numéro {{convention.numero}})</em>
+                        </p>
+                    {% else %}
+                        <p class="fr-alert__title">Votre convention signée a déjà été téléversée</p>
+                    {% endif %}
+                </div>
+            </div>
             {% if request|is_bailleur %}
-                <div class="fr-col-md-12">
-                    <div role="alert" class="fr-alert fr-alert--info">
+                <div class="fr-col-12 fr-mb-4w">
+                    <div role="alert" class="fr-alert fr-alert--info  fr-icon-arrow-right-s-line-double">
                         <p class="fr-alert__title">
-                            Avenants
+                            Créer un avenant
                         </p>
-                        <p>
-                            L'avenant créé sera automatiquement rattaché à la convention actuelle.
-                        </p>
-                        <div>
-                            <a class="fr-btn fr-my-1w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
+                        <p>Votre projet a évolué. Vous avez identifié des informations erronées ou caduque ?</p>
+                        <div class="block--row-strech">
+                            <a class="fr-btn fr-my-1w fr-mr-2w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
                                 <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
+                            </a>
+                            <a class="fr-my-1w fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
+                                Consulter le récapitulatif
                             </a>
                         </div>
                     </div>
                 </div>
             {% endif %}
-            <div class="fr-grid-row fr-grid-row--gutters">
-                <div class="fr-col-12 fr-mb-2w block--row-strech apilos-line-top">
+            <div class="fr-col-12">
+                <div class="fr-mb-2w block--row-strech apilos-line-top">
                     <div class="block--row-strech-1 fr-my-2w">
                         <p class="fr-alert__title">
                             Générer la fiche CAF
@@ -50,8 +55,8 @@
                     </form>
                 </div>
             </div>
-            <div class="fr-grid-row fr-grid-row--gutters">
-                <div class="fr-col-12 fr-mb-2w block--row-strech apilos-line-top">
+            <div class="fr-col-12">
+                <div class="fr-mb-2w block--row-strech apilos-line-top">
                     <div class="block--row-strech-1 fr-my-2w">
                         <p class="fr-alert__title">
                             Voir la conventions signée (en PDF)
@@ -65,21 +70,27 @@
                     </button>
                 </div>
             </div>
-            <div class="fr-grid-row fr-grid-row--gutters">
+            <div class="fr-col-12">
                 {% if request|is_instructeur %}
-                    <div class="fr-col-12  fr-mb-3w">
-                        <div role="alert" class="fr-alert fr-alert--warning">
+                    <div class="fr-mb-3w apilos-line-top">
+                        <div class="fr-my-2w">
                             <p class="fr-alert__title">
                                 Résiliation/dénonciation de la convention
                             </p>
                             <p class="fr-mb-2w">Vous pouvez ici procéder à la résiliation/dénonciation de la convention dans APiLos.</p>
+
                             <form method="post" action="" id="{{resiliation_form.date_resiliation.id_for_label}}_validation_form">
                                 {% csrf_token %}
-                                {% include "common/form/input_date.html" with form_input=resiliation_form.date_resiliation editable=True %}
+                                <div class="block--row-strech">
+                                    <div class="block--row-strech-1  fr-mr-6w">
 
-                                <button class="fr-btn apilos-btn--red fr-btn--icon-left fr-fi-delete-line fr-my-2w" data-fr-opened="false" type="button" aria-controls="fr-modal-resiliate-{{convention.uuid}}">
-                                    Résilier/Dénoncer la convention
-                                </button>
+                                        {% include "common/form/input_date.html" with form_input=resiliation_form.date_resiliation editable=True %}
+                                    </div>
+
+                                    <button class="fr-btn apilos-btn--secondary--red fr-btn--icon-left fr-fi-delete-line fr-my-2w" data-fr-opened="false" type="button" aria-controls="fr-modal-resiliate-{{convention.uuid}}">
+                                        Résilier/Dénoncer la convention
+                                    </button>
+                                </div>
                             </form>
                         </div>
                         <dialog aria-labelledby="fr-modal-resiliate-{{convention.uuid}}-title" id="fr-modal-resiliate-{{convention.uuid}}" class="fr-modal" role="dialog">
